--- a/src/Message.css
+++ b/src/Message.css
@@ -19,3 +19,8 @@
 .messages__info{
     margin-left: 10px;
 }
+@media screen and (max-width:445px){
+    .messages{
+        flex: 1 !important;
+    }
+}
